force-app/main/default/objects/Salesforce_Assist_Score__c/Salesforce_Assist_Score__c.object-meta.xml
<CustomObject>
    <description>This object used to save the Lead, Account, Contact and Opportunity scores.</description>
    <label>Salesforce Assist Score</label>
    <nameField>
        <displayFormat>SCR-{0000}</displayFormat>
        <label>Score Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Assist Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>