force-app/main/default/objects/Salesforce_Assist_Score__c/fields/Output__c.field-meta.xml
<CustomField>
    <fullName>Output__c</fullName>
    <label>Output</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>