force-app/main/default/objects/Salesforce_Assist_Score__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <label>Rule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>