force-app/main/default/objects/Salesforce_Assist_Score__c/fields/Scoring_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Rule_Name__c</fullName>
    <label>Scoring_Rule Name</label>
    <type>TextArea</type>
</CustomField>