force-app/main/default/objects/Salesforce_Assist_Score__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Type__c</columns>
    <columns>Scoring_Rule_Name__c</columns>
    <columns>Rule__c</columns>
    <columns>Output__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>